--- a/gb/16/9/13/n8293603.md
+++ b/gb/16/9/13/n8293603.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/elbl2947/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/elbl2947/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/elbl2947/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/elbl2947/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/elbl2947/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>咖啡因对人体的五个重要影响</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2014/12/141213220713985-e1473736255413.jpg" />
 <h6>咖啡作除了提神醒脑，对人体健康还有很多其他影响。（fotolia）
 </h6>
 <hr>
-<p>【大纪元2016年09月13日讯】(大纪元记者林永清编译报导)按下公司里<ahref="https://github.com/elbl2947/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>机的按钮，对许多人来说也是每天早上处理工作的开始。多数人以咖啡作为<ahref="https://github.com/elbl2947/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E.md#1">提神</a>醒脑的方式，但除了振奋精神以外，咖啡对大脑及身体还有哪些影响呢?</p>
-<p>研究证实，<ahref="https://github.com/elbl2947/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>因对人体的影响有很多，且优缺参半。加州大学洛杉矶分校（UCLA）医学中心的资深营养师丹娜（Dana Hunnes）与约翰霍普斯金大学医学院（Johns Hopkins Medicine）助理教授瑞秋．莎拉（Rachel Salas）在健美生活杂志《SELF》上说明了以下五种饮用咖啡后对身体的影响：:</p>
-<p><strong>1.<ahref="https://github.com/elbl2947/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1%E5%9B%A0.md#1">咖啡因</a>在10分钟内就会起作用：</strong></p>
-<p>咖啡豆里含有植物营养素及多酚，是对身体有益的抗氧化物，而<ahref="https://github.com/elbl2947/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1%E5%9B%A0.md#1">咖啡因</a>会经由血液快速抵达大脑，让人感到精神提振。大概从喝下咖啡10分钟后，咖啡因就会开始起作用。丹娜（Dana Hunnes）表示，咖啡因会对脑内的腺甘酸产生干扰，而腺甘酸是神经系统的镇定剂，会抑制大脑活动及促进睡眠。当腺甘酸受体被咖啡因干扰后，腺甘酸对大脑影响的效果就会减弱，让人感到充满精神和注意力。另外也有研究发现吸收咖啡因会增强记忆力。</p>
+<p>【大纪元2016年09月13日讯】(大纪元记者林永清编译报导)按下公司里<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>机的按钮，对许多人来说也是每天早上处理工作的开始。多数人以咖啡作为<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E.md#1">提神</a>醒脑的方式，但除了振奋精神以外，咖啡对大脑及身体还有哪些影响呢?</p>
+<p>研究证实，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>因对人体的影响有很多，且优缺参半。加州大学洛杉矶分校（UCLA）医学中心的资深营养师丹娜（Dana Hunnes）与约翰霍普斯金大学医学院（Johns Hopkins Medicine）助理教授瑞秋．莎拉（Rachel Salas）在健美生活杂志《SELF》上说明了以下五种饮用咖啡后对身体的影响：:</p>
+<p><strong>1.<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1%E5%9B%A0.md#1">咖啡因</a>在10分钟内就会起作用：</strong></p>
+<p>咖啡豆里含有植物营养素及多酚，是对身体有益的抗氧化物，而<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1%E5%9B%A0.md#1">咖啡因</a>会经由血液快速抵达大脑，让人感到精神提振。大概从喝下咖啡10分钟后，咖啡因就会开始起作用。丹娜（Dana Hunnes）表示，咖啡因会对脑内的腺甘酸产生干扰，而腺甘酸是神经系统的镇定剂，会抑制大脑活动及促进睡眠。当腺甘酸受体被咖啡因干扰后，腺甘酸对大脑影响的效果就会减弱，让人感到充满精神和注意力。另外也有研究发现吸收咖啡因会增强记忆力。</p>
 <p>但喝太多咖啡就会产生失眠的作用。莎拉（Rachel Salas）说：在接近睡眠时间喝咖啡，就易出现失眠倾向。如果晚上不易入睡，建议中午以后就避免咖啡因的摄取。大部分的人平均需要4至6小时才能将血液中的咖啡因代谢至原先的一半，如果早上九点喝下一杯200毫克的咖啡，下午三点会有100毫克还在血液中，到晚上九点时还有50毫克。当然实际情况依每个人的体质有所差异。</p>
 <p><strong>2.咖啡因会影响人的情绪：</strong></p>
 <p>咖啡因会让脑内的多巴胺增加，让人觉得心情愉快，但对每天喝咖啡的人容易形成依赖，导致没喝咖啡前出现烦躁及头痛等戒断症状。研究显示高剂量咖啡因会增加焦虑及恐慌，已经有这些心理健康问题的人会对咖啡因更敏感，情绪更容易受咖啡因影响。</p>
@@ -23,7 +23,7 @@
 <p>1.多运动。</p>
 <p>2.平时多摄取小鱼干、牛奶、绿色蔬菜、乳酪或钙片。</p>
 <p>3.因利尿作用需多饮用开水，避免水分流失。</p>
-<p>4.咖啡也会降低体内铁之吸收，所以最好餐前或饭后三十分钟再饮用。</p>
+<p>4.咖啡也会降低体内铁之吸收，所以最好餐前或饭后三十分钟再饮用。◇</p>
 <p>责任编辑：唐依旋</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -32,42 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/12/11/16/n3731248.md#1">能量饮恐致13死 FDA调查</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/12/11/16/n3731915.md#1">又出包 5小时能量饮酿13死33住院 　</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/14/9/10/n4245346.md#1">身体越来越疲惫的7个原因</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/2/5/n4360121.md#1">9个意想不到的健康小叮咛</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/2/13/n4366189.md#1">老茶要喝也要存 老爷两台湾老茶“好喝 !”</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/2/23/n4372485.md#1">能量饮料藏隐忧 11类健康选项护元气</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/3/12/n4385355.md#1">常吃这9种食物 牙齿坏得快</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/3/26/n4396594.md#1">早晚各做好五件事 健康没烦恼</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/4/15/n4411932.md#1">414国际咖啡日  巴西人最爱的饮品</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/15/4/16/n4412815.md#1">十大妙方 助您戒除难缠的汽水瘾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/11/16/n3731248.md#1">能量饮恐致13死 FDA调查</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/11/16/n3731915.md#1">又出包 5小时能量饮酿13死33住院 　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/9/10/n4245346.md#1">身体越来越疲惫的7个原因</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/2/5/n4360121.md#1">9个意想不到的健康小叮咛</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/2/13/n4366189.md#1">老茶要喝也要存 老爷两台湾老茶“好喝 !”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/2/23/n4372485.md#1">能量饮料藏隐忧 11类健康选项护元气</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/12/n4385355.md#1">常吃这9种食物 牙齿坏得快</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/26/n4396594.md#1">早晚各做好五件事 健康没烦恼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/15/n4411932.md#1">414国际咖啡日  巴西人最爱的饮品</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/16/n4412815.md#1">十大妙方 助您戒除难缠的汽水瘾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/elbl2947/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992445.md#1" target="_blank">（储安平之子）储望华：沉重的回忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078341.md#1">金正恩若突垮台 美将启动“不可能的任务”</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077776.md#1">遭央视连骂三天 蓬佩奥反在中国人气飙升</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080214.md#1">蓬佩奥：大量证据将病毒和武汉实验室相联</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078195.md#1">文革重来？湖北刘艳丽因言获罪被判四年</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079058.md#1">蔡阿嘎二宝满月 喜收蔡总统暖心贺礼</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080335.md#1">孙俪发文为女儿庆生 6岁小花又被亲到脸变形</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081675.md#1">刘真离世44天 辛龙深夜发文悼亡妻</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/2/25/n11893623.md#1">【命理】他为何由相信命运变成不相信命运？</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076297.md#1">守成贤主宋仁宗 驾崩后连敌国也举国哀痛</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/24/n12059149.md#1">星孛与人事遥相呼应 并非浪得虚名</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/12/n12024956.md#1">【馨香雅句】诗词中的女孩名</a></li>
-<li><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12071494.md#1">飘洋过海 移民艰辛路──我家族的故事（一）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/elbl2947/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/elbl2947/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/13/n8293603.htm">咖啡因对人体的五个重要影响</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/13/n8293603.htm">咖啡因对人体的五个重要影响</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/elbl2947/djy/blob/master/gb/16/9/13/n8293603.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/elbl2947/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/elbl2947/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/elbl2947/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elbl2947/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/9/13/n8293603.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
